Updating test cases