@@ -185,7 +185,7 @@ class DroolJudicialRoleMappingCivilTest extends DroolBase {
                 containsInAnyOrder("circuit-judge","hmcts-judiciary"));
         assertEquals(appointmentList.get(0).getEpimmsId(),
                 roleAssignments.get(0).getAttributes().get("primaryLocation").asText());
-        roleAssignments.stream().filter(c -> c.getGrantType().equals(GrantType.STANDARD)).collect(Collectors.toList())
+        roleAssignments.stream().filter(c -> c.getGrantType().equals(GrantType.STANDARD)).toList()
                 .forEach(r -> assertEquals(authorisationList.size(), r.getAuthorisations().size()));
         assertEquals(appointmentList.get(0).getStartDate().getDayOfYear(),
                 roleAssignments.get(0).getBeginTime().getDayOfYear());
@@ -228,12 +228,13 @@ class DroolJudicialRoleMappingCivilTest extends DroolBase {
 
         //assertion
         assertFalse(roleAssignments.isEmpty());
-        assertEquals(4, roleAssignments.size());
+        assertEquals(5, roleAssignments.size());
         assertThat(roleAssignments.stream().map(RoleAssignment::getRoleName).collect(Collectors.toList()),
-                containsInAnyOrder("fee-paid-judge","hmcts-judiciary",
-                        "fee-paid-judge","hmcts-judiciary"));
+                containsInAnyOrder("judge", "judge", "fee-paid-judge", "fee-paid-judge", "hmcts-judiciary"));
+        assertEquals(appointmentList.get(0).getEpimmsId(),
+                roleAssignments.get(3).getAttributes().get("primaryLocation").asText());
 
-        roleAssignments.stream().filter(c -> c.getGrantType().equals(GrantType.STANDARD)).collect(Collectors.toList())
+        roleAssignments.stream().filter(c -> c.getGrantType().equals(GrantType.STANDARD)).toList()
                 .forEach(r -> assertEquals(authorisationList.size(), r.getAuthorisations().size()));
 
         assertEquals(appointmentList.get(0).getStartDate().getDayOfYear(),
@@ -279,11 +280,11 @@ class DroolJudicialRoleMappingCivilTest extends DroolBase {
 
         //assertion
         assertFalse(roleAssignments.isEmpty());
-        assertEquals(2, roleAssignments.size());
+        assertEquals(3, roleAssignments.size());
         assertThat(roleAssignments.stream().map(RoleAssignment::getRoleName).collect(Collectors.toList()),
-                containsInAnyOrder("fee-paid-judge","hmcts-judiciary"));
+                containsInAnyOrder("judge","fee-paid-judge","hmcts-judiciary"));
 
-        roleAssignments.stream().filter(c -> c.getGrantType().equals(GrantType.STANDARD)).collect(Collectors.toList())
+        roleAssignments.stream().filter(c -> c.getGrantType().equals(GrantType.STANDARD)).toList()
                 .forEach(r -> {
                     //removes the auth in the past successfully so minus 1
                     assertEquals(authorisationList.size() - 1, r.getAuthorisations().size());
@@ -326,13 +327,13 @@ class DroolJudicialRoleMappingCivilTest extends DroolBase {
 
         //assertion
         assertFalse(roleAssignments.isEmpty());
-        assertEquals(6, roleAssignments.size());
+        assertEquals(5, roleAssignments.size());
 
         assertThat(roleAssignments.stream().map(RoleAssignment::getRoleName).collect(Collectors.toList()),
-                containsInAnyOrder("circuit-judge","leadership-judge",
-                        "hmcts-judiciary","case-allocator","hmcts-judiciary","task-supervisor"));
+                containsInAnyOrder("leadership-judge", "circuit-judge", "task-supervisor",
+                        "case-allocator", "hmcts-judiciary"));
 
-        roleAssignments.stream().filter(c -> c.getGrantType().equals(GrantType.STANDARD)).collect(Collectors.toList())
+        roleAssignments.stream().filter(c -> c.getGrantType().equals(GrantType.STANDARD)).toList()
                 .forEach(r -> {
                     assertEquals(authorisationList.size(), r.getAuthorisations().size());
                     assertEquals(appointmentList.get(0).getEpimmsId(),
